// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#F5F5F6",
            "color": "#e0e0e0",
          },
          false,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          Object {
            "borderColor": "#d33c44",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../components/Icon/assets/close_contrast.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          Object {
            "backgroundColor": "#d33c44",
            "borderRadius": 10,
            "height": 18,
            "position": "absolute",
            "right": 10,
            "top": 13,
            "width": 18,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 12,
          "lineHeight": 16,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "marginTop": 2.5,
          "maxWidth": "100%",
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="numeric"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "600",
          "lineHeight": 16,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "marginBottom": 2.5,
        },
      ]
    }
  >
    Hello World
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={true}
      numberOfLines={5}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
        "width": 256,
      },
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="soyjavi"
    />
  </View>
</View>
`;
